# FileWeaver

./: .README.md.swp  .gitignore  .gitmodules  :w  Method2  README  README.md  book.texprocessed.txt  conf.ini  configure.py  docextract.py  extract.py  install.sh  kextract.py  kw.txt  latex_kw-extraction.py  objects.inv  pyproject.toml  requirements.txt  run_fileweaver.py  searchindex.js  wsclient.py
.github/workflows/: sphinx.yml
books/: book.texprocessed.txt  math_textbook_en.tex  proto.tex
branch/master/: .buildinfo  index.html  objects.inv  searchindex.js
branch/stage/: api.html
branch/tmpstage2/: .buildinfo  search.html
branch/tmpstage4/: genindex.html
docs/: Makefile  conf.py
docs/guide/: quickstart.rst
fileGraph/: .msglog.txt  git.html  graph.html  index.js  info.html  logfile.txt  package-lock.json  package.json  params.js  readme.md  sub.js  test.html  truc.js
fileGraph/lib/: backend.js  exchange.js  git.js  graph.js  graphView.js  menu.css  menu.js  statemachine.js
fileGraph/test/: backend_entry.py  exchange-log.json  exchange-log2.json  exchange-log3.json  exchange.json  frontend.js  sim.js
fileweaver/: __init__.py  params.py
fileweaver/base/: .cooking.py.swp  .linking.py.swp  .managing.py.swp  cooking.py  filters.py  graph.py  linking.py  managing.py
fileweaver/default-kitchen/: csv.rcp  jpeg.rcp  new_format_git.sh  pdf.rcp  py.rcp  svg.rcp  tex.rcp  txt.rcp
scenarios/complex/: scnr.sh
scripts/: startup_scenario_complex.sh  startup_scenario_hw.sh  startup_scenario_one.sh  stracegawk
tests/: test_fileweaver.py  testing_code.py
(+29 files in other folders)
