[tool.poetry]
name = "fileweaver"
version = "0.0.1"
description = ""
authors = ["jgori <juliengori@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^10.3"
pyzmq = "^22.3.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-tikz = "^0.4.16"
matplotlib = "^3"
scikit-learn = "^1.1.1"
pylatexenc = "^2.10"
pandas = "^1.4.2"
lxml = "^4.9.0"
yake = "^0.4.8"
rake-nltk = "^1.0.6"
gensim = "^4.2.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
